refactor: transition from DNS server to hosts file modification
Updated main.go to change the functionality:
- Removed DNS server setup.
- Added code to modify the hosts file on Windows.
- Incorporated testing connection functionality using 'ping'.
- Enhanced logging for better clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ VRConnectivity-Shield
 *.log
 
 # Ignore the Go Modules cache
-/go.sum
-/go.mod
+go.sum
+go.mod
 
 # Ignore system and temporary files
 .DS_Store
